all: Add helper on configuration field (#2798)

--- a/modules/account_cog/locale/fr.po
+++ b/modules/account_cog/locale/fr.po
@@ -246,7 +246,8 @@ msgctxt "field:ir.test_case,account_template:"
 msgid "Account Template"
 msgstr "Modèle de compte"
 
-msgctxt "field:manual.postponement.reconciliation.motive,account_movement_deactivation:"
+msgctxt ""
+"field:manual.postponement.reconciliation.motive,account_movement_deactivation:"
 msgid "Account Movement Deactivation"
 msgstr "Désactivation par mouvement comptable"
 
@@ -346,10 +347,6 @@ msgctxt "field:manual.reconciliation.postponement,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
-msgctxt "field:party.party,reconciliation_color:"
-msgid "Reconciliation Color"
-msgstr "Couleur de lettrage"
-
 msgctxt "field:party.party,currency:"
 msgid "Currency"
 msgstr "Devises"
@@ -389,6 +386,10 @@ msgstr "Icône de à recevoir"
 msgctxt "field:party.party,receivable_today_icon:"
 msgid "Receivable Today Icon"
 msgstr "Icône de à recevoir aujourd'hui"
+
+msgctxt "field:party.party,reconciliation_color:"
+msgid "Reconciliation Color"
+msgstr "Couleur de lettrage"
 
 msgctxt "field:party.party,reconciliation_comment:"
 msgid "Active Reconciliation Postponement Comment"
@@ -450,7 +451,14 @@ msgctxt "field:party.synthesis.menu.move.line,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
-msgctxt "help:manual.postponement.reconciliation.motive,account_movement_deactivation:"
+msgctxt "help:account.account,tags:"
+msgid "Configuration object tags list. Allows searching for all configuration objects related to a tag."
+msgstr ""
+"Liste des labels sur l'objet de configuration. Permet ensuite de rechercher "
+"l'ensemble des objets de configuration liés à un même label."
+
+msgctxt ""
+"help:manual.postponement.reconciliation.motive,account_movement_deactivation:"
 msgid ""
 "If set: automatically deactivate reconciliation postponement when triggering"
 " a movement for the related party"
