--- a/modules/claim/locale/fr.po
+++ b/modules/claim/locale/fr.po
@@ -1362,6 +1362,33 @@ msgstr ""
 "Si cochée, la prestation sera exercée automatiquement une fois le préjudice "
 "déclaré"
 
+msgctxt "help:benefit,beneficiary_kind:"
+msgid "Define who will benefit of the benefit"
+msgstr "Définit qui sera le bénéficiaire de la prestation"
+
+msgctxt "help:benefit,extra_data:"
+msgid ""
+"Extra data to characterize the benefit. These extra data are available in "
+"rule engine."
+msgstr ""
+"Données complémentaires sur la prestation. Ces données sont disponibles dans"
+" le moteur de règle."
+
+msgctxt "help:benefit,extra_data_def:"
+msgid ""
+"List of extra data that will be requested for delivering this benefit in a "
+"claim. These data can be used in rule engine and will be versioned and "
+"store on the delivered service"
+msgstr ""
+"Liste des données complémentaires qui seront demandées lorsque la prestation"
+" sera exercée dans un sinistre. Ces données peuvent être utilisées dans le "
+"moteur de règle et seront stockées et versionnées sur la prestation exercée."
+
+msgctxt "help:benefit,loss_descs:"
+msgid "Loss description list when the benefit can be delivered"
+msgstr ""
+"Liste des évenements sur lesquels les prestations peuvent être exercées."
+
 msgctxt "help:benefit,may_have_origin:"
 msgid ""
 "If True, services based on this benefit will have the possibility to select "
@@ -1373,6 +1400,12 @@ msgstr ""
 msgctxt "help:benefit,several_delivered:"
 msgid "If true, it will be possible to deliver the same benefit several times"
 msgstr "Si cochée, la prestation peut être délivrée plusieurs fois "
+
+msgctxt "help:benefit,tags:"
+msgid "Configuration object tags list. Allows searching for all configuration objects related to a tag."
+msgstr ""
+"Liste des labels sur l'objet de configuration. Permet ensuite de rechercher "
+"l'ensemble des objets de configuration liés à un même label."
 
 msgctxt "help:benefit.loss.description,contract_hold_sub_status:"
 msgid ""
