--- a/modules/claim_eligibility/locale/fr.po
+++ b/modules/claim_eligibility/locale/fr.po
@@ -259,6 +259,15 @@ msgctxt "help:benefit,decision_default:"
 msgid "The default decision to be set when delivering a new service"
 msgstr "La décision par défaut à appliquer à la prestation fournie"
 
+msgctxt "help:benefit,eligibility_decisions:"
+msgid "Decisions that can be used when accepting or refusing the eligibility"
+msgstr "Décisions disponibles pour accepter ou rejeter une prestation"
+
+msgctxt "help:benefit,eligibility_rules:"
+msgid "Rule to define if a benefit can be delivered"
+msgstr ""
+"Règle d'éligibilité pour connaitre si la prestation peut être exercée ou non"
+
 msgctxt "help:benefit,refuse_decision_default:"
 msgid ""
 "If the service is automatically refused, then this decision will be used by "
@@ -336,10 +345,10 @@ msgctxt ""
 "model:rule_engine.rule_parameter,selection:rule_parameter_4_periode_maximale_entre_un_precedent_arret_et_une_rechute_type_periodicite"
 msgid ""
 "jour:Jour\n"
-"            mois:Mois"
+"mois:Mois"
 msgstr ""
 "jour:Jour\n"
-"            mois:Mois"
+"mois:Mois"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,string:rule_paramater_1_data_delai_de_declaration_quantite_eligibite_prestation"
