--- a/modules/claim_group/locale/fr.po
+++ b/modules/claim_group/locale/fr.po
@@ -51,6 +51,19 @@ msgctxt "field:offered.product,default_termination_claim_behaviour:"
 msgid "Default Post Termination Claim Behaviour"
 msgstr "Comportement par défaut des sinistres suite à résiliation"
 
+msgctxt "help:benefit,is_group:"
+msgid "Define if the benefit is available only for a group coverage"
+msgstr ""
+"Définit si la prestation est une prestation pour une garantie collective"
+
+msgctxt "help:offered.product,default_termination_claim_behaviour:"
+msgid ""
+" Define how claim indemnification will be computed once this option is "
+"terminated"
+msgstr ""
+"Définit comment les indemnisations sont calculées une fois que la garantie "
+"est résiliée"
+
 msgctxt "model:ir.action,name:act_benefit_collective"
 msgid "Collective Benefits"
 msgstr "Prestations collectives"
