--- a/modules/contract_insurance_document_request/locale/fr.po
+++ b/modules/contract_insurance_document_request/locale/fr.po
@@ -176,6 +176,20 @@ msgstr ""
 "descripteur de documents, et dont les valeurs sont des dictionnaires. Les "
 "clés possibles pour ces sous-dictionnaires sont : ['blocking']"
 
+msgctxt "help:offered.option.description,document_rules:"
+msgid ""
+"Define which documents are requested and required during option subscription"
+msgstr ""
+"Définit quels documents sont demandés et requis lors de la souscription de "
+"l'option"
+
+msgctxt "help:offered.product,document_rules:"
+msgid ""
+"Define which documents are requested and required during contract subscription"
+msgstr ""
+"Définit quels documents sont demandés et requis lors de la souscription du "
+"contrat"
+
 msgctxt "model:document.rule,name:"
 msgid "Document Managing Rule"
 msgstr "Règles de gestion des documents"
