--- a/modules/contract_insurance_invoice/locale/fr.po
+++ b/modules/contract_insurance_invoice/locale/fr.po
@@ -376,6 +376,10 @@ msgctxt "field:contract,last_invoice_start:"
 msgid "Last Invoice Start Date"
 msgstr "Date de début de la dernière quittance"
 
+msgctxt "field:contract,last_paid_invoice:"
+msgid "Last Paid Invoice"
+msgstr "Dernière quittance payée"
+
 msgctxt "field:contract,last_paid_invoice_end:"
 msgid "Last Paid Invoice End Date"
 msgstr "Date de fin de la dernière quittance payée"
@@ -1127,11 +1131,11 @@ msgstr ""
 
 msgctxt "help:contract.billing_information,payer:"
 msgid ""
-"You may set another payer if there is a payer"
-"relation between other party and the subscriber"
+"You may set another payer if there is a payer relation between other party "
+"and the subscriber"
 msgstr ""
-"Vous pouvez changer le payeur s'il y a"
-"une relation de type payeur entre un tiers et le souscripteur"
+"Vous pouvez changer le payeur s'il y a une relation de type payeur entre un "
+"tiers et le souscripteur"
 
 msgctxt "help:contract.payment_suspension,force_active:"
 msgid "Force the suspension status to active or inactive"
@@ -1164,6 +1168,10 @@ msgstr ""
 "proratisée par la durée de la période si elle est plus courte que la "
 "fréquence. Si décoché le montant quittancé est la prime entière."
 
+msgctxt "help:offered.option.description,account_for_billing:"
+msgid "Account used to credit premium amount"
+msgstr "Compte comptable utilisé pour créditer le montant de la prime"
+
 msgctxt "help:offered.option.description,taxes_included_in_premium:"
 msgid "Taxes Included In Premium"
 msgstr "Taxes incluses dans le tarif"
@@ -1172,6 +1180,10 @@ msgctxt ""
 "help:offered.option.description.premium_rule,match_contract_frequency:"
 msgid "Should the premium be stored at the contract's frequency ?"
 msgstr "La prime doit-elle être stockée à la fréquence du contrat?"
+
+msgctxt "help:offered.product,billing_modes:"
+msgid "Billing mode available to invoice the contract"
+msgstr "Mode de quittancement disponible pour quittancer le contrat"
 
 msgctxt "help:offered.product,taxes_included_in_premium:"
 msgid "Taxes Included In Premium. Requires tax rounding to be set to\"line\""
