--- a/modules/contract_insurance_payment/locale/fr.po
+++ b/modules/contract_insurance_payment/locale/fr.po
@@ -107,8 +107,12 @@ msgid "Payment Journal"
 msgstr "Journal de paiement"
 
 msgctxt "help:offered.product,payment_journal:"
-msgid "If no journal defined the global configuration will be used"
-msgstr "Si aucun journal n'est défini, la configuration gloable sera utilisée"
+msgid ""
+"Payment journal used when billing mode is set to direct debit.If no journal "
+"defined the global configuration will be used"
+msgstr ""
+"Journal de paiement utilisé si le mode de quittancement est prélèvement. Si "
+"aucun journal n'est défini, la configuration gloable sera utilisée"
 
 msgctxt "model:account.payment.merged.by_contract,name:"
 msgid "Merged payments by contracts"
