--- a/modules/contract_underwriting/locale/fr.po
+++ b/modules/contract_underwriting/locale/fr.po
@@ -142,6 +142,10 @@ msgctxt "field:contract.underwriting.option,decision:"
 msgid "Underwriting Decision"
 msgstr "Décision d'analyse risques"
 
+msgctxt "field:contract.underwriting.option,exclusions:"
+msgid "Exclusions"
+msgstr "Exclusions"
+
 msgctxt "field:contract.underwriting.option,extra_data:"
 msgid "Extra Data"
 msgstr "Données Complémentaires"
@@ -153,10 +157,6 @@ msgstr "Résumé des données complémentaires"
 msgctxt "field:contract.underwriting.option,extra_premiums:"
 msgid "Extra Premiums"
 msgstr "Surprimes"
-
-msgctxt "field:contract.underwriting.option,exclusions:"
-msgid "Exclusions"
-msgstr "Exclusions"
 
 msgctxt "field:contract.underwriting.option,id:"
 msgid "ID"
@@ -398,6 +398,11 @@ msgctxt "field:underwriting.rule-underwriting.decision,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
+msgctxt "help:offered.option.description,underwriting_rules:"
+msgid "Rule that defines underwriting behavior during option subscription"
+msgstr ""
+"Règle définissant le comportement de l'analyse de risque à la souscription"
+
 msgctxt "help:underwriting.rule,accepted_decision:"
 msgid ""
 "If set and the rule returns true, this would be the accepted decision for "
@@ -405,6 +410,10 @@ msgid ""
 msgstr ""
 "Si cochée et que la règle retourne vrai, ceci sera la décision d'acceptation"
 " pour la garantie"
+
+msgctxt "help:underwriting.rule,decisions:"
+msgid "Decisions available for underwriting"
+msgstr "Décisions disponibles pour l'analyse médicale"
 
 msgctxt "help:underwriting.rule,rule:"
 msgid "Returns True if accepted without condition, "
