--- a/modules/endorsement/locale/fr.po
+++ b/modules/endorsement/locale/fr.po
@@ -26,10 +26,6 @@ msgctxt "error:document.receive:"
 msgid "A contract must be set !"
 msgstr "Un contrat doit être renseigné !"
 
-msgctxt "error:endorsement.ask_next_endorsement:"
-msgid "Do you want to execute the endorsement \"%(next_endorsement)s\" too?"
-msgstr "Souhaitez-vous exécuter l'avenant \"%(next_endorsement)s\" également?"
-
 msgctxt "error:endorsement.contract.activation_history:"
 msgid "New version"
 msgstr "Nouvelle version"
@@ -556,14 +552,6 @@ msgstr "Mis à jour par"
 msgctxt "field:endorsement,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
-
-msgctxt "field:endorsement.ask_next_endorsement.choice,id:"
-msgid "ID"
-msgstr "Identifiant"
-
-msgctxt "field:endorsement.ask_next_endorsement.choice,question:"
-msgid "Question"
-msgstr "Question"
 
 msgctxt "field:endorsement.configuration,create_date:"
 msgid "Create Date"
@@ -2245,6 +2233,10 @@ msgstr ""
 "La création de l'avenant ne sera autorisé que si la règle renvoie la valeur "
 "True"
 
+msgctxt "help:offered.product,endorsement_definitions:"
+msgid "Endorsements available on a contract linked to this product"
+msgstr "Avenants disponibles sur un contrat lié à ce produit"
+
 msgctxt "model:contract.manage_options,name:"
 msgid "Manage Options"
 msgstr "Gérer les options"
@@ -2256,10 +2248,6 @@ msgstr "Garantie"
 msgctxt "model:endorsement,name:"
 msgid "Endorsement"
 msgstr "Avenant"
-
-msgctxt "model:endorsement.ask_next_endorsement.choice,name:"
-msgid "Ask Next Endorsement Choice"
-msgstr "Exécuter l'avenant suivant"
 
 msgctxt "model:endorsement.configuration,name:"
 msgid "Endorsement Configuration"
@@ -2966,16 +2954,6 @@ msgstr "Avenants"
 msgctxt "view:res.group:"
 msgid "Endorsement Definitions"
 msgstr "Définitions d'avenant"
-
-msgctxt ""
-"wizard_button:endorsement.ask_next_endorsement,choice,apply_with_generate:"
-msgid "Generate"
-msgstr "Générer"
-
-msgctxt ""
-"wizard_button:endorsement.ask_next_endorsement,choice,apply_without_generate:"
-msgid "No"
-msgstr "Non"
 
 msgctxt "wizard_button:endorsement.decline,select_reason,decline:"
 msgid "Decline"
