--- a/modules/offered/locale/fr.po
+++ b/modules/offered/locale/fr.po
@@ -4,8 +4,7 @@ msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "error:extra_data:"
 msgid "Data %(data)s has multiple parents with the current configuration"
-msgstr ""
-"La donnée %(data)s a plusieurs parents dans la configuration courante"
+msgstr "La donnée %(data)s a plusieurs parents dans la configuration courante"
 
 msgctxt "error:extra_data:"
 msgid "Data %(sub_data)s is missing from the configuration"
@@ -16,12 +15,32 @@ msgid "Expected key %s to be set in field %s of %s"
 msgstr "%s doit être renseigné dans le champ %s de %s"
 
 msgctxt "error:extra_data:"
+msgid "Invalid domain in schema \"%(schema)s\"."
+msgstr "Domaine non valide dans le schéma « %(schema)s »."
+
+msgctxt "error:extra_data:"
 msgid "Invalid value for key %s in field %s of %s"
 msgstr "Valeur invalide pour la donnée %s du champ %s de %s"
 
 msgctxt "error:extra_data:"
 msgid "The code must be unique!"
 msgstr "Le code doit être unique"
+
+msgctxt "error:extra_data:"
+msgid ""
+"The following keys will be removed from all existing data in the database, this may take some time:\n"
+"%(codes)s"
+msgstr ""
+"Toutes les occurences des clefs suivantes seront retirées de la base de données, cela peut prendre du temps:\n"
+"%(codes)s"
+
+msgctxt "error:extra_data:"
+msgid ""
+"The following keys will be renamed in all existing data in the database, this may take some time:\n"
+"%(codes)s"
+msgstr ""
+"Toutes les occurences des clefs suivantes seront renommées en base de données, cela peut prendre du temps:\n"
+"%(codes)s"
 
 msgctxt "error:extra_data:"
 msgid "Too many recursion levels in \"sub data definition"
@@ -73,6 +92,10 @@ msgctxt "field:extra_data,digits:"
 msgid "Digits"
 msgstr "Précision"
 
+msgctxt "field:extra_data,domain:"
+msgid "Domain"
+msgstr "Domaine"
+
 msgctxt "field:extra_data,has_default_value:"
 msgid "Default Value"
 msgstr "Valeur par Défaut"
@@ -88,10 +111,6 @@ msgstr "Type métier"
 msgctxt "field:extra_data,name:"
 msgid "Code"
 msgstr "Code"
-
-msgctxt "field:extra_data,domain:"
-msgid "Domain"
-msgstr "Domaine"
 
 msgctxt "field:extra_data,parents:"
 msgid "Parents"
@@ -255,7 +274,7 @@ msgstr "Créé par"
 
 msgctxt "field:offered.option.description,currency:"
 msgid "Currency"
-msgstr "Devises"
+msgstr "Devise"
 
 msgctxt "field:offered.option.description,currency_digits:"
 msgid "Currency Digits"
@@ -715,7 +734,7 @@ msgstr "Date de Début"
 
 msgctxt "field:offered.product,subscriber_kind:"
 msgid "Subscriber Kind"
-msgstr "Type"
+msgstr "Type de souscripteur"
 
 msgctxt "field:offered.product,tags:"
 msgid "Tags"
@@ -913,6 +932,12 @@ msgctxt "help:extra_data,selection_sorted:"
 msgid "If the selection must be sorted on label"
 msgstr "Si la sélection doit être triée par le libéllé"
 
+msgctxt "help:extra_data,tags:"
+msgid "Configuration object tags list. Allows searching for all configuration objects related to a tag."
+msgstr ""
+"Liste des labels sur l'objet de configuration. Permet ensuite de rechercher "
+"l'ensemble des objets de configuration liés à un même label."
+
 msgctxt "help:offered.configuration,use_default_style:"
 msgid ""
 "If checked, the report templates will use Coog's default style if there is "
@@ -921,9 +946,54 @@ msgstr ""
 "Si coché, les modèles de courriers utiliseront le style par défaut de Coog "
 "s'il n'y a pas de style défini sur le produit"
 
+msgctxt "help:offered.option.description,ending_rule:"
+msgid "Rule that returns a date which defines when the contract will end"
+msgstr "Règle qui retourne la date de résiliation planifiée du contrat"
+
+msgctxt "help:offered.option.description,extra_data:"
+msgid ""
+"Extra data to characterize the option. These extra data are available in "
+"rule engine."
+msgstr ""
+"Données complémentaires sur l'option. Ces données sont disponibles dans le "
+"moteur de règle."
+
+msgctxt "help:offered.option.description,extra_data_def:"
+msgid ""
+"List of extra data that will be requested for subscribing this option. These"
+" data can be used in rule engine and will be versioned and stored on the "
+"subscribed option."
+msgstr ""
+"Liste des données complémentaires qui seront demandées lors de la "
+"souscription de la garantie. Ces données sont utilisables par le moteur de "
+"règle. Elles seront versionnées et stockées au niveau de l'option."
+
+msgctxt "help:offered.option.description,options_excluded:"
+msgid ""
+"If one of these options is already subscribed, it will not be possible to "
+"subscribe this option"
+msgstr ""
+"Si une des options de la liste est souscrite alors cette option ne pourra "
+"pas être souscrite"
+
+msgctxt "help:offered.option.description,options_required:"
+msgid "Options required in order to subscribe this option"
+msgstr "Options requises afin de souscrire cette option"
+
 msgctxt "help:offered.option.description,sequence:"
 msgid "Used to order the coverages accross the application"
 msgstr "Utilisé pour ordonner les garanties dans l'application"
+
+msgctxt "help:offered.option.description,subscription_behaviour:"
+msgid "Define how the option is initialized and required at subscription"
+msgstr ""
+"Définit comment une garantie est initialisée et requise à la souscription"
+
+msgctxt "help:offered.option.description,tags:"
+msgid "Configuration object tags list. Allows searching for all configuration objects related to a tag."
+msgstr ""
+"Liste des labels sur l'objet de configuration. Permet ensuite de rechercher "
+"l'ensemble des objets de configuration liés à un même label."
 
 msgctxt "help:offered.product,contract_generator:"
 msgid "If empty, contract numbers will have to be manually set"
@@ -938,9 +1008,42 @@ msgstr ""
 "Nombre d'années de conservation des données de contrats liés à ce produit "
 "après la résiliation."
 
+msgctxt "help:offered.product,extra_data:"
+msgid ""
+"Extra data to characterize product. These extra data are available in rule "
+"engine"
+msgstr ""
+"Données complémentaires sur le produit. Ces données sont disponibles dans le"
+" moteur de règle."
+
+msgctxt "help:offered.product,extra_data_def:"
+msgid ""
+"List of extra data that will be requested to subscribe a contract. These data can "
+"be used in rule engine and will be versioned and stored on the contract"
+msgstr ""
+"Liste des données complémentaires qui seront demandées à la souscription "
+"d'un contrat. Ces données peuvent être utilisées dans le moteur de règle et "
+"seront versionnées et stockées sur le contrat."
+
 msgctxt "help:offered.product,icon:"
 msgid "This icon will be used to quickly identify the product"
 msgstr "Cette icône sera utilisée afin de rapidement identifier le produit"
+
+msgctxt "help:offered.product,report_templates:"
+msgid "Report templates available for this product"
+msgstr "Modèles d'impression disponibles pour ce produit"
+
+msgctxt "help:offered.product,subscriber_kind:"
+msgid "Define who can subscribe to the product (person, legal entity, both)"
+msgstr ""
+"Définit qui peut souscrire à ce produit (une personne physique, une personne"
+" morale ou les deux)"
+
+msgctxt "help:offered.product,tags:"
+msgid "Configuration object tags list. Allows searching for all configuration objects related to a tag."
+msgstr ""
+"Liste des labels sur l'objet de configuration. Permet ensuite de rechercher "
+"l'ensemble des objets de configuration liés à un même label."
 
 msgctxt "model:extra_data,name:"
 msgid "Extra Data"
