--- a/modules/offered_eligibility/locale/fr.po
+++ b/modules/offered_eligibility/locale/fr.po
@@ -58,6 +58,14 @@ msgctxt "field:offered.option.description.eligibility_rule,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
+msgctxt "help:offered.option.description,eligibility_rules:"
+msgid ""
+"If the rule result is True, the option can be activated else it must be "
+"declined or removed"
+msgstr ""
+"Si le résultat de la règle est vrai alors la garantie pourra être activée "
+"sinon elle devra être déclinée ou supprimée."
+
 msgctxt "model:offered.option.description.eligibility_rule,name:"
 msgid "Option Description Eligibility Rule"
 msgstr "Règle d'éligbilité à la garantie"
