--- a/modules/offered_insurance/locale/fr.po
+++ b/modules/offered_insurance/locale/fr.po
@@ -957,6 +957,12 @@ msgctxt "field:rule_engine-extra_data,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
+msgctxt "help:covered_element.end_reason,tags:"
+msgid "Configuration object tags list. Allows searching for all configuration objects related to a tag."
+msgstr ""
+"Liste des labels sur l'objet de configuration. Permet ensuite de rechercher "
+"l'ensemble des objets de configuration liés à un même label."
+
 msgctxt "help:extra_data,selection:"
 msgid "A couple of key and label separated by \":\" per line"
 msgstr "Un couple de clé, valeur séparaé par un \":\" par ligne"
@@ -975,6 +981,30 @@ msgid ""
 "editing of the field"
 msgstr ""
 "Si coché, le nom sur l'élément couvert sera affiché et pourra être édité"
+
+msgctxt "help:offered.item.description,tags:"
+msgid "Configuration object tags list. Allows searching for all configuration objects related to a tag."
+msgstr ""
+"Liste des labels sur l'objet de configuration. Permet ensuite de rechercher "
+"l'ensemble des objets de configuration liés à un même label."
+
+msgctxt "help:offered.option.description,family:"
+msgid ""
+"Define the main insurance family. According to the family selected some "
+"behavior are different"
+msgstr ""
+"Définit la famille d'assurance de la garantie. Selon cette famille, des "
+"comportements seront différents (lors de la souscription, du traitement d'un"
+" sinistre...)"
+
+msgctxt "help:offered.option.description,insurance_kind:"
+msgid "Categorized coverage (used in insurer delegation configuration)"
+msgstr ""
+"Type d'assurance (Utilisé dans le paramétrage des délégations assureur)"
+
+msgctxt "help:offered.option.description,item_desc:"
+msgid "Define the risk covered by the coverage"
+msgstr "Définit le risque couvert par la garantie"
 
 msgctxt "help:offered.option.description,with_exclusions:"
 msgid "If True, it is be possible to add exclusions to subscribed options"
