--- a/modules/report_engine/locale/fr.po
+++ b/modules/report_engine/locale/fr.po
@@ -51,16 +51,16 @@ msgid ""
 "The following keys will be removed from all existing data in the database, this may take some time:\n"
 "%(codes)s"
 msgstr ""
-"Toutes les occurences des clefs suivantes seront retirées de la base de "
-"données, cela peut prendre du temps:\n%(codes)s"
+"Toutes les occurences des clefs suivantes seront retirées de la base de données, cela peut prendre du temps:\n"
+"%(codes)s"
 
 msgctxt "error:report.template.parameter:"
 msgid ""
 "The following keys will be renamed in all existing data in the database, this may take some time:\n"
 "%(codes)s"
 msgstr ""
-"Toutes les occurences des clefs suivantes seront renommées en base de "
-"données, cela peut prendre du temps:\n%(codes)s"
+"Toutes les occurences des clefs suivantes seront renommées en base de données, cela peut prendre du temps:\n"
+"%(codes)s"
 
 msgctxt "error:report.template:"
 msgid "Flat Document"
@@ -781,6 +781,12 @@ msgid ""
 msgstr ""
 "Si coché, un document sera produit pour chaque objet. Si décoché, un seul "
 "document sera produit pour plusieurs objets."
+
+msgctxt "help:report.template,tags:"
+msgid "Configuration object tags list. Allows searching for all configuration objects related to a tag."
+msgstr ""
+"Liste des labels sur l'objet de configuration. Permet ensuite de rechercher "
+"l'ensemble des objets de configuration liés à un même label."
 
 msgctxt "help:report.template.parameter,selection:"
 msgid "A couple of key and label separated by \":\" per line"
