--- a/modules/underwriting_claim_group/locale/fr.po
+++ b/modules/underwriting_claim_group/locale/fr.po
@@ -62,6 +62,14 @@ msgctxt "field:contract.option.benefit,underwriting_rule_extra_data:"
 msgid "Underwriting Rule Extra Data"
 msgstr "Données complémentaires de règle de demande de décision"
 
+msgctxt "help:benefit,underwriting_rules:"
+msgid ""
+"Define how underwriting will be processed during claim declaration and "
+"treatment"
+msgstr ""
+"Définit comment l'analyse médicale sera gérée pendant le processus de "
+"déclaration et traitement du sinistre"
+
 msgctxt "model:benefit-underwriting_rule,name:"
 msgid "Benefit - Underwriting Rule"
 msgstr "Relation Prestation - Règle de demande de décisions"
