--- a/modules/claim_indemnification/locale/fr.po
+++ b/modules/claim_indemnification/locale/fr.po
@@ -1545,6 +1545,13 @@ msgstr ""
 "Les périodes vont être automatiquement recalculées depuis les informations "
 "des précédentes"
 
+msgctxt "help:benefit,indemnification_kind:"
+msgid ""
+"Define how the indemnification dates will be initialized (period or capital)"
+msgstr ""
+"Définit comment les dates d'une période d'indemnisation seront initialisée "
+"(période, capital, rente)"
+
 msgctxt "help:benefit,payment_journals:"
 msgid ""
 "The payment journals defined here will be pickable when creating a new "
@@ -1552,6 +1559,15 @@ msgid ""
 msgstr ""
 "Les journaux de paiement définis ici seront utilisables lors de la création "
 "d'une période d'indemnisation sur un service délivré pour la prestation"
+
+msgctxt "help:benefit,products:"
+msgid ""
+"Accounting products available when creating a new indemnification. Account "
+"and taxes that apply to the benefit are defined in an accounting product"
+msgstr ""
+"Produits comptables disponibles lorsque l'on créé une indemnisation. Le compte "
+"comptable et les taxes qui s'appliquent à l'indemnisation sont définis "
+"dans un produit comptable. "
 
 msgctxt "help:claim.configuration,sorting_method:"
 msgid "This value will be used to sort indemnifications by start date"
